samples/_failures_safe/1761697881_63b7d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7924bf1.c: In function ‘main’:
./samples/SAFE/__tmp_c7924bf1.c:146:17: error: expected ‘;’ at end of input
  146 |     print_matrix
      |                 ^
      |                 ;
./samples/SAFE/__tmp_c7924bf1.c:146:5: error: expected declaration or statement at end of input
  146 |     print_matrix
      |     ^~~~~~~~~~~~
